# airbyte_deployment

./: .gitignore  Dockerfile-spark  README.md  docker-compose-minio-spark.yml  pyproject.toml  requirements.txt  spark-defaults.conf
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/source/: sources.yml
dbt_project/models/staging/: stg_depcode.sql  stg_most_recent_entire_weather.sql  stg_most_recent_weather.sql  stg_test.sql
scripts/: airbyte_quick_install.sh  spark_cluster_entrypoint.sh  spark_master_entrypoint.sh
