[tool.poetry]
name = "airbyte-deployment"
version = "0.1.0"
description = ""
authors = ["donatien konan <donatien.konan.pro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pendulum = "*"
pytest = "*"
apache-airflow = {version = "^2.4.0", extras = ["postgres", "airbyte"]}
dbt-core = "*"
pyarrow = "*"
pandas = "2.0.2"
missingno = "^0.5.2"
pytest-mock = "^3.14.0"
jupyterlab = "4.2.4"
dbt-spark = {version = "1.8.0", extras = ["PyHive"]}

[tool.poetry.group.dev.dependencies]
ipython = "8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
